--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prisma": "^5.15.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "winston": "^3.13.0"
