--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && prisma migrate dev && prisma db seed && next build",
+    "build": "prisma migrate dev && prisma generate && prisma db seed && next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -12,14 +12,14 @@
     "seed": "node prisma/seed.js"
   },
   "dependencies": {
-    "@prisma/client": "^5.15.1",
+    "@prisma/client": "^5.9.1",
     "next": "14.2.4",
-    "prisma": "^5.15.1",
+    "prisma": "^5.9.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
-    "winston": "^3.13.0"
+    "winston": "^3.11.0"
   }
 }
